--- a/requirements_exact.txt
+++ b/requirements_exact.txt
@@ -21,6 +21,7 @@ pillow==11.3.0
 protobuf==6.32.0
 pyarrow==21.0.0
 pydeck==0.9.1
+pyperclip==1.9.0
 python-dateutil==2.9.0.post0
 pytz==2025.2
 referencing==0.36.2
